tests/snapshots/snapshots/snapshots__snapshots__error_messages__error_issue_not_found.snap
---
source: tests/snapshots/error_messages.rs
expression: normalize_output(&output.stderr)
---
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: src/sync/path.rs:LINE: Validating sync path path=./.beads/issues.jsonl beads_dir=./.beads
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: src/sync/path.rs:LINE: Path validated for sync I/O path=./.beads/issues.jsonl
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync: src/sync/mod.rs:LINE: Import path validated input_path=./.beads/issues.jsonl beads_dir=./.beads allow_external=false
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync: src/sync/mod.rs:LINE: ID-REDACTED completed imported_count=0 jsonl_path=./.beads/issues.jsonl
{
  "error": {
    "code": "ISSUE_NOT_FOUND",
    "message": "Issue not found: ID-REDACTED",
    "hint": "Run 'br list' to see available issues.",
    "retryable": false,
    "context": {
      "searched_id": "ID-REDACTED"
    }
  }
}
